--- a/App/app/src/main/res/layout/activity_login.xml
+++ b/App/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
         android:layout_marginBottom="2dp"/>
 
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
@@ -73,6 +74,7 @@
         android:layout_marginBottom="2dp"/>
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="366dp"
         android:layout_height="48dp"
         android:layout_marginTop="2dp"
