--- a/App/app/src/main/res/layout/activity_register.xml
+++ b/App/app/src/main/res/layout/activity_register.xml
@@ -52,6 +52,7 @@
             android:textSize="12sp" />
 
         <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@null"
@@ -75,6 +76,7 @@
             android:textSize="12sp" />
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@null"
@@ -99,6 +101,7 @@
             android:textSize="12sp" />
 
         <EditText
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@null"
@@ -123,6 +126,7 @@
             android:textSize="12sp" />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@null"
@@ -152,6 +156,7 @@
                 android:src="@drawable/button_background_blue" />
 
             <TextView
+                android:id="@+id/btnRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
