--- a/App/app/src/main/res/layout/activity_login.xml
+++ b/App/app/src/main/res/layout/activity_login.xml
@@ -93,42 +93,31 @@
         android:background="@android:color/holo_blue_dark"
         android:layout_marginBottom="10dp"/>
 
-    <!-- Nút Login -->
-    <FrameLayout
-        android:layout_width="374dp"
-        android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_background_blue"
+        android:text="Login"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
-            android:contentDescription="Login Button"
-            android:src="@drawable/button_background_blue" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Login"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </FrameLayout>
     <!-- Đăng ký tài khoản -->
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnRegisterActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:padding="0dp"
         android:text="New user? Register Now"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="14sp"
-        android:textStyle="bold"
-        android:background="@android:color/transparent"
-        android:padding="0dp"/>
+        android:textStyle="bold" />
 
     <!-- Đăng nhập bằng phương thức khác -->
 
